# CppPractice

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  tests.sh
cmake/: CompileOptions.cmake
src/libcsc/: CMakeLists.txt
src/libcsc/list/: list.h
src/libcsc/smartptr/: SharedPtr.h  UniquePtr.h
src/libcsc/soundex/: main.cpp  soundex.cpp  soundex.h
src/libcsc/time/: time.h
test/: CMakeLists.txt
test/libcsc/: list.cpp  smartptr.cpp  soundex.cpp  time.cpp
